# AraSLAM

./: .gitignore  .gitlab-ci.yml  CMakeLists.txt  Cargo.toml  README.md  build.sh  install_dependencies_mac.sh  run_example.sh
.github/workflows/: rust.yml
ci/: check.sh  install-windows-vcpkg.sh
cpp_legacy/src/: CMakeLists.txt  ara_slam.h  visual_odometry.cc  visual_odometry.h
cpp_legacy/src/calibration/: calibrator.cc  calibrator.h
cpp_legacy/src/data/: dataset.cc  dataset.h  kitti_dataset.cc  kitti_dataset.h  video_dataset.cc  video_dataset.h
cpp_legacy/src/depth/: depth_map.cc  depth_map.h
cpp_legacy/src/epipolar_geometry/: epipolar.cc  epipolar.h
cpp_legacy/src/features/: features.cc  features.h
cpp_legacy/src/localisation/: localisation.cc  localisation.h
cpp_legacy/src/viz/: viz.cc  viz.h
cpp_legacy/tests/: CMakeLists.txt
cpp_legacy/tests/epipolar/: test_epipolar.cc
cpp_legacy/tools/: CMakeLists.txt  calibration_tool.cc  cam_model_detection.cc  camera_pose_estimator.cc  kitti_mono_visual_odometry.cc  mono_odometry.cc  stereo_visual_odometry.cc
cpp_legacy/tools/world_tree/: package-lock.json  package.json
cpp_legacy/tools/world_tree/public/: file.yaml  index.html
cpp_legacy/tools/world_tree/src/: index.js  styles.css
cpp_legacy/tools/world_tree/src/elements/: CalibrationBoard.js  CameraView.js
cpp_legacy/tools/world_tree/src/spikes/: Example.js
examples/: mono_vo.rs
examples/edo_tensei/: show_window.rs
examples/kiss3d/: cube.rs  point_cloud.rs
research/: BIM_README.md  Deep_Learning_Papers.md
src/: data.rs  features.rs  geometry.rs  lib.rs  metrics.rs
src/camera/: camera.rs  mod.rs
src/data/: kitti.rs  mod.rs  new_tsukuba.rs
src/data/kitti/: download_kitti.rs
src/visualisation/: mod.rs  test_show_window.rs
tests/: common.rs  sample_integration_how_to.rs
