[package]
name = "ara_slam"
version = "0.1.0"
authors = ["AJ Ibraheem <ibraheemaj@icloud.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
opencv = {version = "0.46", features = ["contrib"]}

[[example]]
name = "show_window"
path = "examples/edo_tensei/show_window.rs"