[package]
name = "ara_slam"
version = "0.1.0"
authors = ["AJ Ibraheem <ibraheemaj@icloud.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
opencv = {version = "0.46", features = ["contrib"]}
rand = "0.7"
alphanumeric-sort = "1.4.0"
kiss3d = "0.27"
nalgebra = "0.23.0"
itertools = "0.9"

[[example]]
name = "show_window"
path = "examples/edo_tensei/show_window.rs"
[[example]]
name = "mono_vo"
path = "examples/mono_vo.rs"
[[example]]
name = "cube"
path = "examples/kiss3d/cube.rs"
[[example]]
name = "pcl"
path = "examples/kiss3d/point_cloud.rs"